--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
 
     .bus {
         font-weight: 700;
-        font-size: 90px;
+        font-size: 50px;
+    }
+
+    .data {
+        font-size: 24px;
     }
 </style>
 
@@ -51,26 +55,24 @@
     <div class="container-fluid">
         <!-- <h1 class="words">Buzz...Woody...Rex...Bo Beep...Forky...Hamm...Slinky...Sid!</h1> -->
         <div class="container">
-
             <div class="col-12 mb-4">
                 <h1 class="text-center mt-3 text-white bus">BUS MONITORING</h1>
             </div>
-            <div class="col-12 mt-4 mb-4">
-                <video id="cam_input" height="820" width="1280" class="visually-hidden"></video>
-                <canvas id="canvas_output" width="1280" height="320"></canvas>
+            <div class="col-12 mt-4 mb-4" style="display: flex; justify-content: center; align-items: center;">
+                <video id="cam_input" height="360" width="640" class="visually-hidden"></video>
+                <canvas id="canvas_output" height="360" width="640"></canvas>
             </div>
             <div class="col-12 ">
                 <div class="col-6">
-                    <h1 class="text-center totalNumber text-white">Total Number of People: <span>00</span></h1>
+                    <h1 class="text-center totalNumber text-white data">Total Number of People: <span>00</span></h1>
                 </div>
                 <div class="col-6">
-                    <h1 class="text-center totalFaceObstructed text-white">Face Obstruction:
+                    <h1 class="text-center totalFaceObstructed text-white data">Face Obstruction:
                         <span>00</span>
                     </h1>
                 </div>
-
-
             </div>
+
 
         </div>
 
@@ -80,13 +82,13 @@
         function openCvReady() {
             cv['onRuntimeInitialized'] = () => {
                 let video = document.getElementById("cam_input"); // video is the id of video tag
-                navigator.mediaDevices.getUserMedia({ video: { width: 620, height: 340 }, audio: false })
+                navigator.mediaDevices.getUserMedia({ video: { width: 640, height: 360 }, audio: false })
                     .then(function (stream) {
                         video.srcObject = stream;
                         video.play();
                     })
                     .catch(function (err) {
-                        // console.log("An error occurred! " + err);
+                        console.log("An error occurred! " + err);
                     });
                 let src = new cv.Mat(video.height, video.width, cv.CV_8UC4);
                 let dst = new cv.Mat(video.height, video.width, cv.CV_8UC1);
@@ -97,29 +99,41 @@
                 let classifier = new cv.CascadeClassifier();
                 let eyeClassifier = new cv.CascadeClassifier();
                 let utils = new Utils('errorMessage');
-                let faceCascadeFile = 'haarcascade_frontalface_default.xml';
-                let eyeCascadeFile = 'haarcascade_mcs_mouth.xml';
+                let faceCascadeFile = '/haarcascade_frontalface_default.xml';
+                // let faceCascadeFile = 'lbpcascade_frontalface.xml';
+                let eyeCascadeFile = 'haarcascade_eye.xml';
+
+            
                 utils.createFileFromUrl(faceCascadeFile, faceCascadeFile, () => {
                     classifier.load(faceCascadeFile); // in the callback, load the cascade from file 
                 });
                 utils.createFileFromUrl(eyeCascadeFile, eyeCascadeFile, () => {
                     eyeClassifier.load(eyeCascadeFile); // in the callback, load the cascade from file 
                 });
-                const FPS = 10;
+                const FPS = 15;
                 let faceObstructions = 0;
                 let previousFaceObstructions = new Map();
                 let buzzSound = new Audio('obstruction.mp3');
-                function processVideo() {
-                    let begin = Date.now();
-                    cap.read(src);
+
+
+
+    function processVideo() {
+            let begin = Date.now();
+            cap.read(src);
+
+                // Resize the video
+                let small = new cv.Mat();
+                let dsize = new cv.Size(src.cols / 0.5, src.rows / 0.5);
+                cv.resize(src, small, dsize, 0, 0, cv.INTER_AREA);
+    
                     src.copyTo(dst);
                     cv.cvtColor(dst, gray, cv.COLOR_RGBA2GRAY, 0);
                     try {
-                        classifier.detectMultiScale(gray, faces, 1.1, 3, 0);
-                        eyeClassifier.detectMultiScale(gray, eyes, 1.1, 3, 0);
-                        // console.log(faces.size());
+                        classifier.detectMultiScale(gray, faces, 1.2, 5, 0);
+                        eyeClassifier.detectMultiScale(gray, eyes, 1.2, 5, 0);
+                        console.log(faces.size());
                     } catch (err) {
-                        // console.log(err);
+                        console.log(err);
                     }
 
                     for (let i = 0; i < faces.size(); ++i) {
@@ -188,7 +202,7 @@
         // Send data to the worker
         worker.postMessage(dataToSend);
 
-        </script>
+    </script>
 
         <script async src="js/opencv.js" onload="openCvReady();"></script>
         <script src="js/utils.js"></script>
