--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
                 <video id="cam_input" height="360" width="640" class="visually-hidden"></video>
                 <canvas id="canvas_output" height="360" width="640"></canvas>
             </div>
+            <div class="col-12 d-flex justify-content-center">
+                <div class="col-6">
+                    <p class="text-white text-end pe-5 pb-3">Brightness</p>
+                </div>
+                <div class="col-6 pt-2"> <input type="range" min="0" max="2" step="0.1" value="1" id="brightness"></div>
+
+            </div>
+            <div class="col-12 d-flex justify-content-center">
+                <div class="col-6">
+                    <p class="text-white text-end pe-5 pb-3">Contrast</p>
+                </div>
+                <div class="col-6 pt-2"> <input type="range" min="0" max="2" step="0.1" value="1" id="contrast"></div>
+
+            </div>
             <div class="col-12 ">
                 <div class="col-6">
                     <h1 class="text-center totalNumber text-white data">Total Number of People: <span>00</span></h1>
@@ -74,11 +88,13 @@
             </div>
 
 
+
         </div>
 
 
 
         <script type="text/JavaScript">
+
         function openCvReady() {
             cv['onRuntimeInitialized'] = () => {
                 let video = document.getElementById("cam_input"); // video is the id of video tag
@@ -201,7 +217,29 @@
 
         // Send data to the worker
         worker.postMessage(dataToSend);
+      // Get references to the video, the canvas, and the brightness control
+        const video = document.getElementById('cam_input');
+        const canvas = document.getElementById('canvas_output');
+        const brightnessControl = document.getElementById('brightness');
 
+        // Update the video and canvas brightness when the brightness control value changes
+        brightnessControl.addEventListener('input', function() {
+            // The filter property takes a string, so we need to construct a string
+            // that looks like "brightness(1.5)" or similar
+            const filterValue = `brightness(${this.value})`;
+            video.style.filter = filterValue;
+            canvas.style.filter = filterValue;
+        });
+
+        // Get reference to the contrast control
+        const contrastControl = document.getElementById('contrast');
+
+        // Update the canvas contrast when the contrast control value changes
+        contrastControl.addEventListener('input', function() {
+            // The filter property takes a string, so we need to construct a string
+            // that looks like "contrast(1.5)" or similar
+            canvas.style.filter = `contrast(${this.value})`;
+        });
     </script>
 
         <script async src="js/opencv.js" onload="openCvReady();"></script>
